CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)
PROJECT(get_git_sha)

CONFIGURE_FILE(src/get_git_sha.c "${CMAKE_CURRENT_BINARY_DIR}/get_git_sha.c" @ONLY)

INCLUDE_DIRECTORIES(inc)

ADD_LIBRARY(${PROJECT_NAME} OBJECT ${CMAKE_CURRENT_BINARY_DIR}/get_git_sha.c)
SET(${PROJECT_NAME}_INCLUDE_DIRS ${${PROJECT_NAME}_SOURCE_DIR}/inc CACHE PATH "Path to ${PROJECT_NAME}'s include directory")
