SET(MODULE_UNDER_TEST fmi_simulator)
PROJECT(${MODULE_UNDER_TEST}_tests)
SET(SRC
    calculate_hashTest.cpp
    EmitFMIXmlTest.cpp
    FMITest.cpp
    ParseFMIXmlTest.cpp
    random_FMI_XML.cpp
    )
INCLUDE_DIRECTORIES(${${MODULE_UNDER_TEST}_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ssc_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${GMOCK_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${YAML_CPP_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${exceptions_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${test_data_generator_INCLUDE_DIRS})

ADD_LIBRARY(${PROJECT_NAME} OBJECT ${SRC})
ADD_EXECUTABLE(test_fmi test_fmi.c)
TARGET_LINK_LIBRARIES(
    test_fmi
    ${Boost_FILESYSTEM_LIBRARY}
    x-dyn
    m
    ${GRPC_GRPCPP_UNSECURE}
    ${PROTOBUF_LIBPROTOBUF}
    stdc++
    )
