SET(MODULE_UNDER_TEST grpc)
PROJECT(${MODULE_UNDER_TEST}_tests)
SET(SRC
    GRPCForceModelTest.cpp
    GrpcControllerInterfaceTest.cpp
    )

INCLUDE_DIRECTORIES(${${MODULE_UNDER_TEST}_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ssc_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${GMOCK_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${test_data_generator_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${YAML_CPP_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${mesh_INCLUDE_DIRS}) # For MeshIntersector
INCLUDE_DIRECTORIES(${hdb_interpolators_INCLUDE_DIRS}) # For History

ADD_LIBRARY(${PROJECT_NAME} OBJECT ${SRC})
