SET(MODULE_UNDER_TEST gz_curves)
PROJECT(${MODULE_UNDER_TEST}_tests)
SET(SRC
    ResultantForceComputerTest.cpp
    gz_newton_raphsonTest.cpp
    GZCurveTest.cpp
    )
INCLUDE_DIRECTORIES(${${MODULE_UNDER_TEST}_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ssc_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${binary_stl_data_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${external_file_formats_INCLUDE_DIRS})

ADD_LIBRARY(${PROJECT_NAME} OBJECT ${SRC})
