SET(MODULE_UNDER_TEST hdb_interpolators)
PROJECT(${MODULE_UNDER_TEST}_tests)
SET(SRC
    HDBParserTest.cpp
    HistoryTest.cpp
    RadiationDampingBuilderTest.cpp
    DiffractionInterpolatorTest.cpp
    hdb_test.cpp
    PrecalParserTest.cpp
    )

INCLUDE_DIRECTORIES(${${MODULE_UNDER_TEST}_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ssc_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${test_data_generator_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${eigen_INCLUDE_DIRS})

ADD_LIBRARY(${PROJECT_NAME} OBJECT ${SRC})
