SET(MODULE_UNDER_TEST mesh)
PROJECT(${MODULE_UNDER_TEST}_tests)
SET(SRC
    MeshBuilderTest.cpp
    MeshIntersectorTest.cpp
    mesh_manipulationsTest.cpp
    RandomEPointGenerator.cpp
    ClosingFacetComputerTest.cpp
    TestMeshes.cpp
    )

INCLUDE_DIRECTORIES(${${MODULE_UNDER_TEST}_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${test_data_generator_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ssc_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${external_file_formats_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${binary_stl_data_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${GMOCK_INCLUDE_DIRS})

ADD_LIBRARY(${PROJECT_NAME} OBJECT ${SRC})
